日本語メッセージの追加

--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "05978f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello! World!\")\n",
+    "print(\"こんにちは！　世界！\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "8d75f556",
    "metadata": {},
