開発メッセージ追加

--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "107a823d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"開発を行います！\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05978f3f",
    "metadata": {},
    "outputs": [],
